eks-basic-ingress/yaml/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudskills-front-app-deployment
  namespace: wsi-web
spec:
  replicas: 5
  selector:
    matchLabels:
      app: cloudskills-front-app
  template:
    metadata:
      name: cloudskills-front-app-pod
      labels:
        app: cloudskills-front-app
    spec:
      containers:
        - name: cloudskills-front-app
          image: 060764678458.dkr.ecr.ap-northeast-2.amazonaws.com/worldskills-repo:frontend-application
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudskills-back-app-deployment
  namespace: wsi-web
spec:
  replicas: 5
  selector:
    matchLabels:
      app: cloudskills-back-app
  template:
    metadata:
      name: cloudskills-back-app-pod
      labels:
        app: cloudskills-back-app
    spec:
      containers:
        - name: cloudskills-back-app
          image: 060764678458.dkr.ecr.ap-northeast-2.amazonaws.com/worldskills-repo:backend-application
          ports:
            - containerPort: 8080
