eks-basic-ingress/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
      - pathType: Prefix
        path: "/page"
        backend:
          service:
            name: <>
            port:
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: <>
            port:
              number: 8080
